package com.zcolin.zwebview;

/**
 * 自定义选择文件接口
 */
public interface IPickFile {
    void pickFile(String acceptType, boolean isMulti);
}
