/*
 * *********************************************************
 *   author   colin
 *   company  telchina
 *   email    wanglin2046@126.com
 *   date     18-1-9 上午8:51
 * ********************************************************
 */
package com.zcolin.zwebview.jsbridge;

public interface BridgeHandler {

    void handler(String data, CallBackFunction function);

}
